@@ -55,9 +55,22 @@ int sanityCheckConsistency(const VexData *V, const CorrParams *P)
 	std::vector<AntennaSetup>::const_iterator a;
 	std::vector<CorrRule>::const_iterator r;
 	std::list<std::string>::const_iterator l;
+	int polarizations;
 
 	int nWarn = 0;
 	int nError = 0;
+
+	polarizations = V->getPolarizations();
+	if((polarizations & DIFXIO_POL_RL) && (polarizations & DIFXIO_POL_XY))
+	{
+		std::cerr << "Warning: both linear and circular polarizations are listed in the .vex file.  Very partial support exists for such modes within DiFX.  Use at your own risk!" << std::endl;
+		++nWarn;
+	}
+	if(polarizations & DIFXIO_POL_ERROR)
+	{
+		std::cerr << "Error: the .vex file contains a polarization that is not R, L, X or Y.  Cannot proceed." << std::endl;
+		++nError;
+	}
 
 	for(s = P->sourceSetups.begin(); s != P->sourceSetups.end(); ++s)
 	{
